--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -1,38 +1,56 @@
 = form_for user do |f|
   - if user.errors.any?
     = error_messages_for :user
-  label アカウント名
-  = f.text_field :login_name, hint: false, placeholder: t('helpers.label.user.login_name')
-  label Email
-  = f.text_field :email, hint: false, placeholder: t('helpers.label.user.email')
-  label 氏名
-  = f.text_field :first_name, hint: false, placeholder: t('helpers.label.user.first_name')
-  = f.text_field :last_name, hint: false, placeholder: t('helpers.label.user.last_name')
-  label 自己紹介
-  = f.text_area :description, hint: false, placeholder: t('helpers.label.user.description'), input_html: { class: 'input-block-level', rows: 10 }
-  label GitHubアカウント
-  = f.text_field :github_account, hint: false, placeholder: t('helpers.label.user.github_account'), input_html: { class: 'span6' }
-  label Twitterアカウント
-  = f.text_field :twitter_url, hint: false, placeholder: t('helpers.label.user.twitter_url'), input_html: { class: 'span6' }
-  label Facebookアカウント
-  = f.text_field :facebook_url, hint: false, placeholder: t('helpers.label.user.facebook_url'), input_html: { class: 'span6' }
-  label ブログURL
-  = f.text_field :blog_url, hint: false, placeholder: t('helpers.label.user.blog_url'), input_html: { class: 'span6' }
-  label RSSフィードURL
-  = f.text_field :feed_url, hint: false, placeholder: t('helpers.label.user.feed_url'), input_html: { class: 'span6' }
-  label パスワード
-  = f.text_field :password, hint: false, placeholder: t('helpers.label.user.password')
-  label パスワード（確認）
-  = f.text_field :password_confirmation, hint: false, placeholder: t('helpers.label.user.password_confirmation')
-  label インターンの目的
-  = f.collection_radio_buttons :purpose_cd, User.purposes.map {|k,v| [v, t("activerecord.enums.user.purposes.#{k}")] }, :first, :last
-  label= t('i_want_to_find_job_assist')
-  = f.check_box :find_job_assist
-  label= t('we_will_find_rails_job_by_our_best')
-  label 会社
-  = f.collection_select :company_id, Company.all, :id, :name
+  .field.mdl-textfield.mdl-js-textfield
+    = f.label :login_name, class: 'mdl-textfield__label'
+    = f.text_field :login_name, class: 'mdl-textfield__input'
+  .field.mdl-textfield.mdl-js-textfield
+    = f.label :email, class: 'mdl-textfield__label'
+    = f.text_field :email, class: 'mdl-textfield__input'
+  .field
+    .mdl-textfield.mdl-js-textfield
+      = f.label :first_name, class: 'mdl-textfield__label'
+      = f.text_field :first_name, class: 'mdl-textfield__input'
+    .mdl-textfield.mdl-js-textfield
+      = f.label :last_name, class: 'mdl-textfield__label'
+      = f.text_field :last_name, class: 'mdl-textfield__input'
+  .field.mdl-textfield.mdl-js-textfield
+    = f.label :description, class: 'mdl-textfield__label'
+    = f.text_area :description, class: 'mdl-textfield__input', size: '10x10'
+  .field.mdl-textfield.mdl-js-textfield
+    = f.label :github_account, class: 'mdl-textfield__label'
+    = f.text_field :github_account, class: 'mdl-textfield__input'
+  .field.mdl-textfield.mdl-js-textfield
+    = f.label :twitter_url, class: 'mdl-textfield__label'
+    = f.text_field :twitter_url, class: 'mdl-textfield__input'
+  .field.mdl-textfield.mdl-js-textfield
+    = f.label :facebook_url, class: 'mdl-textfield__label'
+    = f.text_field :facebook_url, class: 'mdl-textfield__input'
+  .field.mdl-textfield.mdl-js-textfield
+    = f.label :blog_url, class: 'mdl-textfield__label'
+    = f.text_field :blog_url, class: 'mdl-textfield__input'
+  .field.mdl-textfield.mdl-js-textfield
+    = f.label :feed_url, class: 'mdl-textfield__label'
+    = f.text_field :feed_url, class: 'mdl-textfield__input'
+  .field.mdl-textfield.mdl-js-textfield
+    = f.label :password, class: 'mdl-textfield__label'
+    = f.text_field :password, class: 'mdl-textfield__input'
+  .field.mdl-textfield.mdl-js-textfield
+    = f.label :password_confirmation, class: 'mdl-textfield__label'
+    = f.text_field :password_confirmation, class: 'mdl-textfield__input'
+  .field
+    label.mdl-radio.mdl-js-radio.mdl-js-ripple-effect
+      = f.collection_radio_buttons :purpose_cd, User.purposes.map {|k,v| [v, t("activerecord.enums.user.purposes.#{k}")] }, :first, :last
+  .field
+    = f.label :find_job_assist, class: 'mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect'
+    = f.check_box :find_job_assist, class: 'mdl-checkbox__input'
+    label= t('we_will_find_rails_job_by_our_best')
+  .field
+    = f.label :company_id
+    = f.collection_select :company_id, Company.all, :id, :name
   #nda= render 'nda'
-  label NDAに同意する
-  = f.check_box :nda, inline_label: t('helpers.label.user.nda')
-  .actions
-    = f.submit nil, class: 'btn btn-primary'
+  .field
+    = f.label :nda, class: 'mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect'
+    = f.check_box :nda, class: 'mdl-checkbox__input'
+  .field
+    = f.submit nil, class: 'mdl-button mdl-js-button mdl-button--raised mdl-button--accent'
