--- a/app/views/application/_header.html.slim
+++ b/app/views/application/_header.html.slim
@@ -1,36 +1,19 @@
-.mdl-layout.mdl-js-layout.mdl-layout--fixed-drawer.mdl-layout--fixed-header
-  header.mdl-layout__header
-    .mdl-layout__header-row
-      .mdl-layout-spacer
-      nav.mdl-navigation.mdl-layout--large-screen-only
-        - if current_user && current_user.admin?
-          = link_to t('admin_index'), admin_root_path, class: '.mdl-navigation__link'
-        = link_to "みんなのブログ", feeds_path, class: '.mdl-navigation__link'
-        = link_to t('practices'), practices_path, class: '.mdl-navigation__link'
-        = link_to t('users'), users_path, class: '.mdl-navigation__link'
-        = link_to t('companies'), companies_path, class: '.mdl-navigation__link'
-        - if current_user
-          = link_to t('logout'), logout_path, class: '.mdl-navigation__link'
-        - else
-          = link_to t('sign_in'), login_path, class: '.mdl-navigation__link'
-          = link_to t('sign_up'), new_user_path, class: '.mdl-navigation__link'
-      .mdl-layout-spacer
-      .mdl-textfield.mdl-js-textfield.mdl-textfield--expandable.mdl-textfield--floating-label.mdl-textfield--align-right
-        label.mdl-button.mdl-js-button.mdl-button--icon for="fixed-header-drawer-exp" 
-          i.material-icons search
-        .mdl-textfield__expandable-holder
-          input#fixed-header-drawer-exp.mdl-textfield__input name="sample" type="text" /
-  .mdl-layout__drawer
+header.mdl-layout__header.mdl-layout__header--scroll
+  .mdl-layout__header-row
+    /! Title
     span.mdl-layout-title= t('256interns')
+    /! Add spacer, to align navigation to the right
+    .mdl-layout-spacer
+    /! Navigation
     nav.mdl-navigation
-      - if current_user && current_user.admin?
-        = link_to t('admin_index'), admin_root_path, class: '.mdl-navigation__link'
-      = link_to "みんなのブログ", feeds_path, class: '.mdl-navigation__link'
-      = link_to t('practices'), practices_path, class: '.mdl-navigation__link'
-      = link_to t('users'), users_path, class: '.mdl-navigation__link'
-      = link_to t('companies'), companies_path, class: '.mdl-navigation__link'
-      - if current_user
-        = link_to t('logout'), logout_path, class: '.mdl-navigation__link'
-      - else
-        = link_to t('sign_in'), login_path, class: '.mdl-navigation__link'
-        = link_to t('sign_up'), new_user_path, class: '.mdl-navigation__link'
+      = render 'nav'
+    .mdl-layout-spacer
+    .mdl-textfield.mdl-js-textfield.mdl-textfield--expandable.mdl-textfield--floating-label.mdl-textfield--align-right
+      label.mdl-button.mdl-js-button.mdl-button--icon for="fixed-header-drawer-exp" 
+        i.material-icons search
+      .mdl-textfield__expandable-holder
+        input#fixed-header-drawer-exp.mdl-textfield__input name="sample" type="text" /
+.mdl-layout__drawer
+  span.mdl-layout-title= t('256interns')
+  nav.mdl-navigation
+    = render 'nav'
