--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -2,15 +2,18 @@
 - content_for :head_last do
   = auto_discovery_link_tag :atom, feeds_url(format: 'atom'), title: 'みんなのブログ'
 
-h1 #{t('listing_users')} (#{@users.size})
+.mdl-cell.mdl-cell--1-col.mdl-cell--hide-tablet.mdl-cell--hide-phone
+mdl-cell.mdl-cell--10-col
+  h3 #{t('listing_users')} (#{@users.size})
 
-ul.accordion-tabs-minimal
-  li.tab-header-and-content
-    = link_to t('all_user'), users_path(target: 'all')
-    .tab-content= render 'tab', users: @users, target: :all
-  li.tab-header-and-content
-    = link_to t('learning_week'), users_path(target: 'learning')
-    .tab-content= render 'tab', users: @users, target: :learning
-  li.tab-header-and-content
-    = link_to t('working_week'), users_path(target: 'working')
-    .tab-content= render 'tab', users: @users, target: :working
+  ul.accordion-tabs-minimal
+    li.tab-header-and-content
+      = link_to t('all_user'), users_path(target: 'all')
+      .tab-content= render 'tab', users: @users, target: :all
+    li.tab-header-and-content
+      = link_to t('learning_week'), users_path(target: 'learning')
+      .tab-content= render 'tab', users: @users, target: :learning
+    li.tab-header-and-content
+      = link_to t('working_week'), users_path(target: 'working')
+      .tab-content= render 'tab', users: @users, target: :working
+.mdl-cell.mdl-cell--1-col.mdl-cell--hide-tablet.mdl-cell--hide-phone
