--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -38,3 +38,14 @@ form .field
   width: 100%
   height: 200px
   overflow: scroll
+
+.mdl-layout__drawer
+  border: none
+
+.mdl-layout-title
+  background-color: rgb(0,188,212)
+
+  .user-icon
+    width: 48px
+    height: 48px
+    border-radius: 24px
