--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -1,51 +1,61 @@
-.mdl-layout__content
-  background-color: #f9f9f9
-main article.practice
-  border-radius: 2px
-  margin-bottom: 80px
-  padding: 80px 56px
-.mdl-layout > footer
+body
+  padding-top: 20px
+  padding-bottom: 20px
+.container > footer
+  width: 100%
+  padding: 15px
   text-align: center
-  position: relative
+.navbar-nav .login-name
+  margin-left: 10px
+  margin-right: 10px
+.buttons .btn
+  margin-right: 10px
+
+.panel-body
+  vertical-align: middle
+
+table.practices
   width: 100%
-  padding: 32px
+  .title
+    vertical-align: middle
 
-main table.companies
-  width: 100%
+  .status
+    width: 220px
+    text-align: right
 
-main table.practices
-  width: 100%
+  .handle
+    width: 200px
+    text-align: right
 
-main .category
-  padding: 40px 56px
-  margin-bottom: 20px
+.user
+  margin: 30px 0 0 0
 
-.user-card-image
-  width: 240px
-  height: 240px
+  .panel-heading
+    position: relative
 
-  .mdl-card__actions
-    padding: 16px
-    background: rgba(0, 0, 0, 0.2)
+  .icon
+    position: absolute
+    top: -12px
+    left: -12px
 
-form .field
-  display: block
+    img
+      width: 64px
+      height: 64px
+      border-radius: 50%
 
-.sign-in
-  padding: 80px 56px
+  .login-name
+    margin-left: 50px
 
+.user.panel-primary.inactive,
+  opacity: 0.4
 #nda
-  width: 100%
   height: 200px
-  overflow: scroll
+  overflow-y: scroll
+  font-size: small
 
-.mdl-layout__drawer
-  border: none
-
-.mdl-layout-title
-  background-color: rgb(0,188,212)
-
-  .user-icon
-    width: 48px
-    height: 48px
-    border-radius: 24px
+  h1,h2,h3,h4
+    font-size: normal !important
+body.home_index section
+  margin-bottom: 40px
+.center
+  text-align: center
