--- a/app/views/companies/index.html.slim
+++ b/app/views/companies/index.html.slim
@@ -1,16 +1,12 @@
-.mdl-cell.mdl-cell--2-col.mdl-cell--hide-tablet.mdl-cell--hide-phone
-mdl-cell.mdl-cell--8-col
-  h3= t('listing_companies')
-  table.companies.mdl-data-table.mdl-js-data-table.mdl-shadow--2dp
-    thead
+table.table
+  thead
+    tr
+      th= t('helpers.label.company.name')
+      th= t('helpers.label.company.description')
+      th= t('helpers.label.company.website')
+  tbody
+    - @companies.each do |company|
       tr
-        th= t('helpers.label.company.name')
-        th= t('helpers.label.company.description')
-        th= t('helpers.label.company.website')
-    tbody
-      - @companies.each do |company|
-        tr
-          td.mdl-data-table__cell--non-numeric= link_to company.name, company
-          td= company.description
-          td= link_to company.website, company.website
-.mdl-cell.mdl-cell--2-col.mdl-cell--hide-tablet.mdl-cell--hide-phone
+        td= link_to company.name, company
+        td= company.description
+        td= link_to company.website, company.website
