--- a/app/views/practices/index.html.slim
+++ b/app/views/practices/index.html.slim
@@ -1,15 +1,10 @@
-.mdl-cell.mdl-cell--2-col.mdl-cell--hide-tablet.mdl-cell--hide-phone
-mdl-cell.mdl-cell--8-col
-  - title t('practices')
-  h3= t('practices')
-  - @categories.each do |category|
-    - if category.practices.present?
-      .category.mdl-color--white.mdl-shadow--2dp
-        h4= category.name
-        p.description= simple_format category.description
-        table.practices
-          tbody
-            = render category.practices
-        p #{current_user.completed_practices_size(category)} / #{category.practices.size}
-  = link_to t('new_practice'), new_practice_path
-.mdl-cell.mdl-cell--2-col.mdl-cell--hide-tablet.mdl-cell--hide-phone
+- title t('practices')
+- @categories.each do |category|
+  - if category.practices.present?
+    .panel.panel-primary
+      .panel-heading= category.name
+      .panel-body= simple_format category.description
+      table.table.practices
+        tbody
+          = render category.practices
+= link_to t('new_practice'), new_practice_path, class: 'btn btn-primary'
