--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -1,56 +1,67 @@
 = form_for user do |f|
   - if user.errors.any?
     = error_messages_for :user
-  .field.mdl-textfield.mdl-js-textfield
-    = f.label :login_name, class: 'mdl-textfield__label'
-    = f.text_field :login_name, class: 'mdl-textfield__input'
-  .field.mdl-textfield.mdl-js-textfield
-    = f.label :email, class: 'mdl-textfield__label'
-    = f.text_field :email, class: 'mdl-textfield__input'
-  .field
-    .mdl-textfield.mdl-js-textfield
-      = f.label :first_name, class: 'mdl-textfield__label'
-      = f.text_field :first_name, class: 'mdl-textfield__input'
-    .mdl-textfield.mdl-js-textfield
-      = f.label :last_name, class: 'mdl-textfield__label'
-      = f.text_field :last_name, class: 'mdl-textfield__input'
-  .field.mdl-textfield.mdl-js-textfield
-    = f.label :description, class: 'mdl-textfield__label'
-    = f.text_area :description, class: 'mdl-textfield__input', size: '10x10'
-  .field.mdl-textfield.mdl-js-textfield
-    = f.label :github_account, class: 'mdl-textfield__label'
-    = f.text_field :github_account, class: 'mdl-textfield__input'
-  .field.mdl-textfield.mdl-js-textfield
-    = f.label :twitter_url, class: 'mdl-textfield__label'
-    = f.text_field :twitter_url, class: 'mdl-textfield__input'
-  .field.mdl-textfield.mdl-js-textfield
-    = f.label :facebook_url, class: 'mdl-textfield__label'
-    = f.text_field :facebook_url, class: 'mdl-textfield__input'
-  .field.mdl-textfield.mdl-js-textfield
-    = f.label :blog_url, class: 'mdl-textfield__label'
-    = f.text_field :blog_url, class: 'mdl-textfield__input'
-  .field.mdl-textfield.mdl-js-textfield
-    = f.label :feed_url, class: 'mdl-textfield__label'
-    = f.text_field :feed_url, class: 'mdl-textfield__input'
-  .field.mdl-textfield.mdl-js-textfield
-    = f.label :password, class: 'mdl-textfield__label'
-    = f.text_field :password, class: 'mdl-textfield__input'
-  .field.mdl-textfield.mdl-js-textfield
-    = f.label :password_confirmation, class: 'mdl-textfield__label'
-    = f.text_field :password_confirmation, class: 'mdl-textfield__input'
-  .field
-    label.mdl-radio.mdl-js-radio.mdl-js-ripple-effect
-      = f.collection_radio_buttons :purpose_cd, User.purposes.map {|k,v| [v, t("activerecord.enums.user.purposes.#{k}")] }, :first, :last
-  .field
-    = f.label :find_job_assist, class: 'mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect'
-    = f.check_box :find_job_assist, class: 'mdl-checkbox__input'
-    label= t('we_will_find_rails_job_by_our_best')
-  .field
-    = f.label :company_id
-    = f.collection_select :company_id, Company.all, :id, :name
-  #nda= render 'nda'
-  .field
-    = f.label :nda, class: 'mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect'
-    = f.check_box :nda, class: 'mdl-checkbox__input'
-  .field
-    = f.submit nil, class: 'mdl-button mdl-js-button mdl-button--raised mdl-button--accent'
+  .form-group
+    = f.label :login_name
+    = f.text_field :login_name, class: 'form-control'
+  .form-group
+    = f.label :email
+    = f.text_field :email, class: 'form-control'
+  .form-group
+    = f.label :first_name
+    = f.text_field :first_name, class: 'form-control'
+  .form-group
+    = f.label :last_name
+    = f.text_field :last_name, class: 'form-control'
+  .form-group
+    = f.label :description
+    = f.text_area :description, class: 'form-control', size: '10x10'
+  .form-group
+    = f.label :github_account
+    = f.text_field :github_account, class: 'form-control'
+  .form-group
+    = f.label :twitter_url
+    = f.text_field :twitter_url, class: 'form-control'
+  .form-group
+    = f.label :facebook_url
+    = f.text_field :facebook_url, class: 'form-control'
+  .form-group
+    = f.label :blog_url
+    = f.text_field :blog_url, class: 'form-control'
+  .form-group
+    = f.label :feed_url
+    = f.text_field :feed_url, class: 'form-control'
+  .form-group
+    = f.label :password
+    = f.text_field :password, class: 'form-control'
+  .form-group
+    = f.label :password_confirmation
+    = f.text_field :password_confirmation, class: 'form-control'
+  .form-group
+    = f.label :purpose, style: 'display: block'
+    = f.collection_radio_buttons :purpose_cd, User.purposes.map {|k,v| [v, t("activerecord.enums.user.purposes.#{k}")] }, :first, :last do |b|
+      = b.label class: 'radio-inline' do
+        = b.radio_button + b.text
+    end
+  .form-group
+    = f.label :find_job_assist, style: 'display: block'
+    .checkbox
+      label
+        = f.check_box :find_job_assist
+        = t('i_want_to_find_job_assist')
+    span.help-block= t('we_will_find_rails_job_by_our_best')
+  .form-group
+    = f.label :company
+    = f.collection_select :company_id, Company.all, :id, :name, {}, class: 'form-control'
+  .form-group
+    = f.label :nda
+    #nda
+      .panel.panel-default
+        .panel-body
+          = render 'nda'
+    .checkbox
+      label
+        = f.check_box :nda
+        = t('agree_nda')
+  .form-group
+    = f.submit nil, class: 'btn btn-primary'
