--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -1,2 +1,4 @@
-h1= t('editing_user')
-= render 'form', user: @user, companies: @companies
+.row
+  .col-xs-12.col-sm-6.col-sm-offset-3
+    h3= t('editing_user')
+    = render 'form', user: @user, companies: @companies
