--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -10,52 +10,49 @@ body
   margin-right: 10px
 .buttons .btn
   margin-right: 10px
-
 .panel-body
   vertical-align: middle
-
 table.practices
   width: 100%
   .title
     vertical-align: middle
-
   .status
     width: 220px
     text-align: right
-
   .handle
     width: 200px
     text-align: right
-
 .user
   margin: 30px 0 0 0
-
   .panel-heading
     position: relative
-
   .icon
     position: absolute
     top: -12px
     left: -12px
-
     img
       width: 64px
       height: 64px
       border-radius: 50%
-
   .login-name
     margin-left: 50px
-
+  .panel-body
+    height: 200px
 .user.panel-primary.inactive,
   opacity: 0.4
 #nda
   height: 200px
   overflow-y: scroll
   font-size: small
-
-  h1,h2,h3,h4
-    font-size: normal !important
 body.home_index section
   margin-bottom: 40px
 .center
   text-align: center
+.completed-users
+  display: inline
+  img
+    border-radius: 50%
+    margin-right: 10px
+    margin-bottom: 10px
+article.entry .content img
+  max-width: 800px
