--- a/app/views/feeds/index.html.slim
+++ b/app/views/feeds/index.html.slim
@@ -1,10 +1,8 @@
 - content_for :head_last do
   = auto_discovery_link_tag :atom, feeds_url(format: 'atom'), title: 'みんなのブログ'
-h1 みんなのブログ
-ul.entries
-  - @entries.each do |entry|
-    li.entry
-      h3= link_to entry.title, entry.url
-      .content= raw entry.content
-      .published published at #{entry.published}
-      .author posted by #{entry.author}
+- @entries.each do |entry|
+  article.entry
+    h4= link_to entry.title, entry.url
+    .content= raw entry.content
+    .published published at #{entry.published}
+    .author posted by #{entry.author}
