Update design in category

--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -9,6 +9,14 @@
   margin-right: 10px
 .panel-body
   vertical-align: middle
+table.categories
+  width: 100%
+  .actions
+    width: 220px
+    text-align: right
+  .handle
+    width: 200px
+    text-align: right
 table.practices
   width: 100%
   .title
