--- a/app/views/admin/categories/_form.html.slim
+++ b/app/views/admin/categories/_form.html.slim
@@ -1,10 +1,12 @@
 = form_for([:admin, category]) do |f|
-  .form-inputs
-    label 名前
-    = f.text_field :name, class: 'input-block-level'
-    label URLスラッグ
-    = f.text_field :slug, class: 'input-block-level'
-    label 詳細
-    = f.text_area :description, size: '10x10', class: 'input-block-level'
-  .actions
+  .form-group
+    = f.label :name
+    = f.text_field :name, class: 'form-control'
+  .form-group
+    = f.label :slug
+    = f.text_field :slug, class: 'form-control'
+  .form-group
+    = f.label :description
+    = f.text_area :description, size: '10x10', class: 'form-control'
+  .form-group
     = f.submit nil, class: 'btn btn-primary'
