--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -41,12 +41,9 @@ ul
     li
       .title= link_to practice.title, practice
 h3= t('completed_practices')
-.row
-  .span9
-    .progress
-      .bar style="width:#{@user.completed_percentage}%"
-  .span1
-    = number_to_percentage @user.completed_percentage, precision: 0
+.progress
+  .progress-bar aria-valuemax="100" aria-valuemin="0" aria-valuenow="#{@user.completed_percentage}" role="progressbar" style=("min-width: 2em; width: #{@user.completed_percentage}%;") 
+    | #{@user.completed_percentage}%
 ul
   - @user.completed_practices.each do |practice|
     li.title= link_to practice.title, practice
