Add studying users in listing practices

--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -21,8 +21,12 @@ table.practices
   width: 100%
   .title
     vertical-align: middle
+  .started-users
+    text-align: right
+    img
+      border-radius: 50%
   .status
-    width: 220px
+    width: 210px
     text-align: right
   .handle
     width: 200px
