--- a/app/views/practices/_practice.html.slim
+++ b/app/views/practices/_practice.html.slim
@@ -1,17 +1,22 @@
 = content_tag_for :tr, practice do |practice|
   td.title
     = link_to practice.title, practice
+  td.started-users
+    - practice.started_users.each do |user|
+      = link_to user do
+        = gravatar_tag user, size: 45
   - if current_user
     td.status
       - status = practice.status(current_user)
       = render 'status', practice: practice
-    td.handle
-      .btn-group
-        = link_to practice_position_path(practice, move: :top), method: :put, class: 'btn btn-default'
-          i.fa.fa-angle-double-up
-        = link_to practice_position_path(practice, move: :higher), method: :put, class: 'btn btn-default'
-          i.fa.fa-angle-up
-        = link_to practice_position_path(practice, move: :lower), method: :put, class: 'btn btn-default'
-          i.fa.fa-angle-down
-        = link_to practice_position_path(practice, move: :bottom), method: :put, class: 'btn btn-default'
-          i.fa.fa-angle-double-down
+    - if current_user.admin?
+      td.handle
+        .btn-group
+          = link_to practice_position_path(practice, move: :top), method: :put, class: 'btn btn-default'
+            i.fa.fa-angle-double-up
+          = link_to practice_position_path(practice, move: :higher), method: :put, class: 'btn btn-default'
+            i.fa.fa-angle-up
+          = link_to practice_position_path(practice, move: :lower), method: :put, class: 'btn btn-default'
+            i.fa.fa-angle-down
+          = link_to practice_position_path(practice, move: :bottom), method: :put, class: 'btn btn-default'
+            i.fa.fa-angle-double-down
