--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -42,8 +42,8 @@ ul
       .title= link_to practice.title, practice
 h3= t('completed_practices')
 .progress
-  .progress-bar aria-valuemax="100" aria-valuemin="0" aria-valuenow="#{@user.completed_percentage}" role="progressbar" style=("min-width: 2em; width: #{@user.completed_percentage}%;") 
-    | #{@user.completed_percentage}%
+  .progress-bar.progress-bar-info aria-valuemax="100" aria-valuemin="0" aria-valuenow="#{@user.completed_percentage}" role="progressbar" style=("min-width: 2em; width: #{number_to_percentage @user.completed_percentage, precision: 0};") 
+    | #{number_to_percentage @user.completed_percentage, precision: 0}
 ul
   - @user.completed_practices.each do |practice|
     li.title= link_to practice.title, practice
