--- a/app/assets/stylesheets/base.css.sass
+++ b/app/assets/stylesheets/base.css.sass
@@ -23,6 +23,8 @@ table.practices
     vertical-align: middle
   .started-users
     text-align: right
+    .inactive
+      opacity: 0.4
     img
       border-radius: 50%
   .status
