--- a/app/views/practices/_practice.html.slim
+++ b/app/views/practices/_practice.html.slim
@@ -9,7 +9,12 @@
   - if current_user
     td.status
       - status = practice.status(current_user)
-      = render 'status', practice: practice
+      .btn-group
+        - %i(not_complete started complete).each do |status|
+          - if practice.status(current_user) == status
+            button.btn.btn-success[class="#{status}" data-status="#{status}" disabled]= t(status)
+          - else
+            button.btn[class="#{status}" data-status="#{status}"]= t(status)
     - if current_user.admin?
       td.handle
         .btn-group
